--- a/src/help.html
+++ b/src/help.html
@@ -34,7 +34,7 @@ window.focus();
 </head>
   <body>
    
-<h1>Avid DocuWorks - Help</h1>
+<h1>DirectRM - Help</h1>
    
 <ul>
    <li><a href="#Add_File_-_File_Location">Adding a file: File Location</a></li>
