--- a/src/udf_help.html
+++ b/src/udf_help.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Avid DocuWOrks - User Defined Fields</title>
+<title>DirectRM - User Defined Fields</title>
 </head>
 <body>
 <p>
